Ember source 5.4.0, stable types

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "ember-power-select": "^8.3.0",
     "ember-qunit": "^8.0.2",
     "ember-resolver": "^11.0.1",
-    "ember-source": "~5.9.0",
+    "ember-source": "^5.4.0",
     "ember-template-lint": "^5.13.0",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^8.57.0",
